# adventOfCode25

./: pyproject.toml
